niya journal left align, out margin fix, journal preview ellipsis

--- a/src/styles/Journal.scss
+++ b/src/styles/Journal.scss
@@ -48,6 +48,7 @@
 
 				.text {
 					font-size: 14px;
+					text-align: left;
 				}
 			}
 		}
