--- a/src/styles/Quotes.scss
+++ b/src/styles/Quotes.scss
@@ -1,3 +1,6 @@
+.out {
+	margin-top: .5rem !important;
+}
 
 div.Quotes {
 	height: 100vh !important;
