--- a/src/styles/UnderConstruction.scss
+++ b/src/styles/UnderConstruction.scss
@@ -1,7 +1,9 @@
+.out {
+}
 
 div.underConstruction {
 	// position: absolute;
-	height: 60vh !important;
+    height: 100vh !important;
 	width: 80vw !important;
 
     display: flex;
